# ChessQt

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bishop.cpp  bishop.h  board.cpp  board.h  king.cpp  king.h  knight.cpp  knight.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  piece.cpp  piece.h  rook.h
chess_logic/: bishop.cpp  bishop.h  board.cpp  board.h  colour.h  king.cpp  king.h  piece.cpp  piece.h  position.h  rook.cpp  rook.h
images/: image_source.txt
resources/: resources.qrc
resources/chess_icons/: icons_source.txt
src/: bishop.cpp  bishop.h  board.cpp  board.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.h  queen.cpp  queen.h  rook.cpp  rook.h  tempMovePiece.h  tempPieceMove.h  tempmove.h
src/gui/: boardview.cpp  boardview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
